fix overflow-fade component

--- a/src/less/components/utility.less
+++ b/src/less/components/utility.less
@@ -183,7 +183,7 @@
 }
 
 .uk-overflow-fade-horizontal > *,
-.uk-overflow-fade-vertical > * { width: fit-content; }
+.uk-overflow-fade-vertical > * { min-width: max-content; }
 
 .uk-overflow-fade-horizontal::-webkit-scrollbar,
 .uk-overflow-fade-vertical::-webkit-scrollbar { display: none; }
